--- a/src/common/fotter/Fotter.scss
+++ b/src/common/fotter/Fotter.scss
@@ -21,15 +21,12 @@
     justify-content: center;
     width: auto;
     height: 250px;
-    padding-left: auto;
-    padding-top: 85px;
-    padding-right: auto;
-    padding-bottom: 70px;
+    margin: auto 0;
 
     .bt-links {
       height: 60px;
       width: 60px;
-      margin: 10px;
+      margin: auto 10px;
       padding: 10px;
       background-color: $color-3;
       border-radius: 25px;
@@ -39,11 +36,14 @@
 
   .gmgame-title-f {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     height: 50px;
+    width: auto;
+    margin: 0 auto;
 
     span {
+      width: auto;
       font-size: 14px;
       font-weight: 400;
       color: #faebd7;
@@ -177,4 +177,51 @@
 
 .loader span:nth-child(30) {
   animation-delay: 2.9s;
+}
+
+@media screen and (max-width: 1600px) {
+}
+
+@media screen and (max-width: 1400px) {
+}
+
+@media screen and (max-width: 1280px) {
+}
+
+@media screen and (max-width: 1024px) {
+}
+
+@media screen and (max-width: 960px) {
+}
+
+@media screen and (max-width: 768px) {
+}
+
+@media screen and (max-width: 640px) {
+}
+
+@media screen and (max-width: 480px) {
+  .fotter {
+    height: 200px;
+
+    .rows-bt {
+      height: 150px;
+
+      .bt-links {
+        height: 50px;
+        width: 50px;
+        margin: auto 10px;
+        padding: 8px;
+      }
+    }
+
+    .gmgame-title-f {
+      span {
+        font-size: 12px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 360px) {
 }
