--- a/src/modules/components/mode/Mode.scss
+++ b/src/modules/components/mode/Mode.scss
@@ -136,16 +136,17 @@
     }
 
     .circle {
-      width: 22px;
-      height: 22px;
+      width: 20px;
+      height: 20px;
+      border: 3px solid $color-3;
       margin: 15px auto;
     }
 
     .h4-mode {
       width: 100%;
       text-align: center;
-      padding-left: 75px;
-      padding-right: 75px;
+      padding-left: 60px;
+      padding-right: 60px;
     }
   }
 }
@@ -154,4 +155,27 @@
 }
 
 @media screen and (max-width: 360px) {
+  .mode-block {
+    margin: 35px auto 20px auto;
+
+    .mode-name {
+      height: 55px;
+      width: 250px;
+      border: 5px solid $color-1;
+
+      h3 {
+        font-size: 22px;
+      }
+    }
+
+    .circle {
+      margin: 10px auto;
+    }
+
+    .h4-mode {
+      font-size: 14px;
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+  }
 }
