--- a/src/modules/pages/general/General.scss
+++ b/src/modules/pages/general/General.scss
@@ -65,7 +65,7 @@
         justify-content: center;
         width: 100%;
         margin-top: 55px;
-        height: 75px;
+        height: auto;
       }
     }
   }
@@ -186,7 +186,7 @@
         position: absolute;
         width: 500px;
         height: 500px;
-        left: 920px;
+        left: 48%;
         top: 75px;
       }
     }
@@ -237,7 +237,7 @@
         .hover-me-block {
           width: 400px;
           height: 400px;
-          left: 750px;
+          //left: 750px;
         }
       }
     }
@@ -259,7 +259,7 @@
         .hover-me-block {
           width: 350px;
           height: 350px;
-          left: 690px;
+          //left: 690px;
         }
       }
     }
@@ -318,7 +318,7 @@
         .hover-me-block {
           width: 350px;
           height: 350px;
-          left: 670px;
+          //left: 670px;
         }
       }
     }
@@ -371,7 +371,6 @@
 
       .block-w {
         .hover-me-block {
-          left: 530px;
           width: 325px;
           height: 325px;
         }
@@ -387,6 +386,19 @@
 }
 
 @media screen and (max-width: 960px) {
+  .main {
+    .row-3 {
+      .block-w {
+        flex-wrap: wrap;
+
+        .hover-me-block {
+          width: 300px;
+          height: 300px;
+          left: 35%;
+        }
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -425,7 +437,6 @@
         max-height: none;
 
         .hover-me-block {
-          left: 250px;
           width: 325px;
           height: 325px;
         }
@@ -489,7 +500,7 @@
 
       .block-w {
         .hover-me-block {
-          left: 170px;
+          left: 35%;
           width: 275px;
           height: 275px;
         }
@@ -509,7 +520,164 @@
 }
 
 @media screen and (max-width: 480px) {
+  .main {
+    .row-1 {
+      .main-content {
+        .main-h1 {
+          margin-top: 210px;
+          font-size: 54px;
+          height: 94px;
+          line-height: 94px;
+        }
+
+        .main-h3 {
+          font-size: 14px;
+          height: 24px;
+          line-height: 24px;
+        }
+
+        .button-container {
+          margin-top: 45px;
+        }
+      }
+    }
+
+    .row-2 {
+      padding-bottom: 50px;
+      padding-top: 50px;
+
+      .content-info {
+        flex-direction: column;
+
+        .info-style {
+          width: 100%;
+
+          .h2-info {
+            height: 45px;
+            line-height: 45px;
+            margin-top: 7px;
+            margin-bottom: 7px;
+            font-size: 28px;
+          }
+
+          .h4-info {
+            line-height: 20px;
+          }
+
+          .h2-right {
+            text-align: left;
+          }
+
+          .h4-right {
+            text-align: left;
+          }
+
+        }
+
+        .info-img {
+          width: 100%;
+          padding: 15px;
+        }
+      }
+
+      .rev {
+        flex-direction: column-reverse;
+      }
+    }
+
+    .row-3 {
+      .tit-block {
+        .title-h3 {
+          margin-bottom: 5px;
+          font-size: 36px;
+          line-height: 50px;
+          height: 50px;
+        }
+
+        .title-h4 {
+          font-size: 14px;
+          padding-left: 15px;
+          padding-right: 15px;
+        }
+      }
+
+      .block-w {
+        padding-top: 60px;
+
+        .hover-me-block {
+          display: none;
+        }
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 360px) {
+  .main {
+    .row-1 {
+      .main-content {
+        .main-h1 {
+          font-size: 44px;
+          height: 72px;
+          line-height: 72px;
+        }
+
+        .main-h3 {
+          font-size: 12px;
+          height: auto;
+          line-height: 12px;
+          padding: 2.5px 15px;
+          text-align: center;
+        }
+
+        .button-container {
+          margin-top: 25px;
+        }
+      }
+    }
+
+    .row-2 {
+      .content-info {
+        .info-style {
+          .h2-info {
+            height: 38px;
+            line-height: 38px;
+            font-size: 24px;
+          }
+
+          .h4-info {
+            font-size: 13px;
+            line-height: 18px;
+          }
+        }
+      }
+    }
+
+    .row-3 {
+      .tit-block {
+        .title-h3 {
+          margin-bottom: 15px;
+          font-size: 24px;
+          line-height: 30px;
+          height: 30px;
+        }
+
+        .title-h4 {
+          font-size: 12px;
+        }
+      }
+
+      .block-w {
+        padding-top: 30px;
+      }
+    }
+
+    .row-4 {
+      .mode-title {
+        font-size: 24px;
+        line-height: 30px;
+        height: 30px;
+      }
+    }
+  }
 }
