create group components, revision variables.scss(del colors) and all

--- a/src/Variables.scss
+++ b/src/Variables.scss
@@ -2,24 +2,22 @@ $color-1: #e4007f;
 $color-2: #011625;
 $color-3: #f4f4f4;
 $color-4: #ffb400;
-$color-5: rgba(228, 0, 125, 0.5);
+//$color-5: none;
 $color-6: #ffd46e;
 $color-7: #000c14;
 $color-8: #00ff00;
 $color-9: #ff0000;
-$color-10: rgba(0, 0, 0, 0.45);
+//$color-10: none;
 $color-11: rgba(0, 6, 11, 0.9);
-$color-12: #32cd32;
-$color-13: rgba(122, 152, 154, 0.45);
+//$color-12: none;
+//$color-13: none;
 $color-14: #161d22;
 $color-15: #0a1217;
-
-$color-16: #ff8dcc;
-$color-17: #ffb400;
-$color-18: #ff4444;
-$color-19: #32cd32;
-$color-20: #47ffe9;
-
+//$color-16: none;
+//$color-17: none;
+//$color-18: none;
+//$color-19: none;
+//$color-20: none;
 $color-21: rgba(1, 22, 37, 1);
 $color-22: rgba(255, 255, 255, 0.1);
-$color-23: #FF6060;
+
