--- a/src/common/header/Header.scss
+++ b/src/common/header/Header.scss
@@ -1,5 +1,14 @@
 @import "../../Variables.scss";
 
+@keyframes appearanceHeader {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1 !important;
+  }
+}
+
 .header {
   z-index: 1000;
   min-height: 75px;
@@ -9,6 +18,10 @@
 
   .menu {
     input[type="checkbox"] {
+      display: none;
+    }
+
+    .togglePhone {
       display: none;
     }
 
@@ -174,56 +187,8 @@
         }
       }
     }
-
-    #toggle {
-      width: 50px;
-      height: 50px;
-      // background: rgba(0, 0, 0, 0.8);
-      cursor: pointer;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      transition: 0.3s ease;
-      display: none;
-
-      ::after {
-        content: "";
-        position: absolute;
-        width: 28px;
-        height: 2px;
-        background: #f7f7f7;
-        transition: 0.3s ease;
-        transform: translateY(10px);
-      }
-
-      ::before {
-        content: "";
-        position: absolute;
-        width: 28px;
-        height: 2px;
-        background: #f7f7f7;
-        transition: 0.3s ease;
-        transform: translateY(-10px);
-        box-shadow: 0 10px 0 #f7f7f7;
-      }
-    }
-
-    #toggle.active {
-      // background: rgba(0, 0, 0, 0.7);
-      background: rgba(48, 52, 73, 0.95);
-
-      ::after {
-        transform: translateY(0px) rotate(-45deg);
-      }
-
-      ::before {
-        transform: translateY(0px) rotate(45deg);
-        box-shadow: 0 0 0 #f7f7f7;
-      }
-    }
   }
 }
-
 
 @media screen and (max-width: 1600px) {
   .header {
@@ -325,17 +290,72 @@
 
 @media screen and (max-width: 960px) {
   .header {
+    height: 50px;
+    min-height: auto;
+    max-height: none;
+    width: 100%;
+
     .menu {
-      .content-menu {
-        .links {
-          .links-li {
-            display: none;
-          }
+      display: flex;
+      width: auto;
+      height: 50px;
+      position: relative;
+
+      .togglePhone {
+        z-index: 15000000;
+        display: flex !important;
+        text-align: center;
+        justify-content: center;
+        position: absolute;
+        width: 50px;
+        height: 50px;
+        flex-direction: column;
+        color: #f4f4f4;
+        font-size: 24px;
+        cursor: pointer;
+
+        &:hover {
+          color: $color-8;
         }
+
+
+        &::after {
+          margin: auto 0;
+          content: "\2630";
+        }
+      }
+
+      .activeBt {
+        &::after {
+          content: "\1F5D9";
+        }
+      }
+
+      .content-menu {
+        display: none;
+        opacity: 0;
+        transition: all 0.25s ease;
+
+        .links {
+          flex-direction: column;
+          justify-content: start;
+          margin-top: 150px;
+        }
+      }
+
+      .linksActive {
+        width: 100%;
+        height: 100vh;
+        background: $color-15;
+        display: flex;
+        position: fixed;
+        animation: appearanceHeader 0.85s both ease;
+        opacity: 1;
       }
     }
   }
 }
+
 
 @media screen and (max-width: 768px) {
 }
