--- a/src/modules/components/[0_grouped_0]-Auth/auth-comp/Auth-comp.scss
+++ b/src/modules/components/[0_grouped_0]-Auth/auth-comp/Auth-comp.scss
@@ -130,7 +130,7 @@
             font-size: 16px;
             font-weight: 400;
             color: $color-8;
-            transition: all 0.5 ease;
+            transition: all 0.5s ease;
 
             :active,
             :hover {
