--- a/src/modules/components/[0_grouped_0]-Profile/my-profile/My-profile.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/my-profile/My-profile.scss
@@ -83,7 +83,6 @@
           height: 64px;
           text-align: center;
           line-height: 26px;
-          width: 50px;
           cursor: pointer;
           color: $color-3;
           border: none;
@@ -109,4 +108,60 @@
       }
     }
   }
+}
+
+@media screen and (max-width: 1600px) {
+  .profile-block {
+    .prof-block {
+      .prof-cont {
+        width: 48%;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1400px) {
+}
+
+@media screen and (max-width: 1280px) {
+  .profile-block {
+    .prof-block {
+      padding: 5px;
+
+      .prof-cont {
+        width: 46%;
+        height: 180px;
+
+        .h5-cont {
+          width: 100%;
+          height: 54px;
+          line-height: 54px;
+          margin-bottom: 18px;
+        }
+
+        .label-cout {
+          width: 88%;
+          font-size: 20px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1024px) {
+}
+
+@media screen and (max-width: 960px) {
+}
+
+@media screen and (max-width: 768px) {
+}
+
+@media screen and (max-width: 640px) {
+}
+
+@media screen and (max-width: 480px) {
+}
+
+@media screen and (max-width: 360px) {
 }
