все экраны для авторизации

--- a/src/Variables.scss
+++ b/src/Variables.scss
@@ -2,7 +2,7 @@ $color-1: #e4007f;
 $color-2: #011625;
 $color-3: #f4f4f4;
 $color-4: #ffb400;
-//$color-5: none;
+$color-5: rgba(0, 0, 0, 0.5);
 $color-6: #ffd46e;
 $color-7: #000c14;
 $color-8: #00ff00;
