--- a/src/modules/components/[0_grouped_0]-Auth/auth-comp/Auth-comp.scss
+++ b/src/modules/components/[0_grouped_0]-Auth/auth-comp/Auth-comp.scss
@@ -2,7 +2,7 @@
 
 @keyframes opacityBlock {
   0% {
-    width: 0px;
+    width: 0;
     margin: 0;
   }
   50% {
@@ -15,8 +15,8 @@
   100% {
     opacity: 1;
     width: 550px;
-    margin: 50px;
-    margin-top: 7%;
+    margin-left: 50px;
+    margin-top: 3.5%;
   }
 }
 
@@ -33,7 +33,7 @@
   }
 }
 
-@keyframes shine-1 {
+@keyframes shine-2 {
   from {
     margin-left: 0;
   }
@@ -45,13 +45,11 @@
 .auth-block {
   display: flex;
   justify-content: space-around;
+  flex-direction: row;
   width: auto;
   max-width: 1600px;
   height: auto;
-  margin-bottom: 50px;
-  margin-top: 15px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 15px auto 50px auto;
   z-index: 2000;
 
   .error {
@@ -59,21 +57,23 @@
     width: auto;
     max-width: 275px;
     min-width: 225px;
+    font-size: 16px;
     height: 20px;
     line-height: 20px;
+    text-align: center;
     margin: 0 auto;
     color: $color-9;
-    transition: all 0.85;
+    transition: all 0.85s ease;
   }
 
   .container {
     width: auto;
-    height: auto;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     border-radius: 15px;
-    background: rgba(0, 0, 0, 0.5);
+    background: $color-5;
 
     .reg-1 {
       width: auto;
@@ -102,14 +102,9 @@
           height: auto;
           flex-direction: row;
           justify-content: flex-start;
-          border-width: 2px;
+          border-width: 1px;
           border-bottom-style: solid;
-          border-image: linear-gradient(
-                          to right,
-                          rgba(0, 0, 0, 0),
-                          $color-3,
-                          rgba(0, 0, 0, 0)
-          ) 1 0%;
+          border-image: linear-gradient(to right, rgba(0, 0, 0, 0), $color-3, rgba(0, 0, 0, 0)) 1 0;
 
           .icon-span {
             width: 50px;
@@ -121,7 +116,7 @@
             min-width: 500px;
             max-width: 500px;
             min-height: 50px;
-            max-height: 150px;
+            max-height: 50px;
             height: auto;
             outline: none;
             border: none;
@@ -162,6 +157,11 @@
         flex-direction: column;
         justify-content: center;
 
+        label {
+          height: 22px;
+          line-height: 22px;
+        }
+
         input[type="checkbox"] {
           display: none;
         }
@@ -181,7 +181,7 @@
 
         input[type="checkbox"] + label:before {
           content: "";
-          display: block;
+          display: flex;
           width: 20px;
           height: 20px;
           border: 1px solid $color-3;
@@ -207,7 +207,7 @@
   }
 
   .card-visual {
-    width: 0px;
+    width: 0;
     height: auto;
     position: relative;
     display: flex;
@@ -223,7 +223,7 @@
       max-height: 650px;
       padding: 15px;
       border-radius: 15px;
-      background: $color-22;
+      background: $color-5;
       position: relative;
 
       .block-l-1 {
@@ -282,6 +282,9 @@
       height: auto;
 
       .style-button-auth {
+        display: none;
+        flex-direction: row;
+        justify-content: center;
         width: 300px;
         height: 75px;
         line-height: 75px;
@@ -289,40 +292,39 @@
         background-color: $color-4;
         border-radius: 22px;
         border: none;
-        margin: 0 auto;
-        margin-top: 50px;
+        margin: 50px auto 0 auto;
         overflow: hidden;
         position: relative;
         cursor: pointer;
         opacity: 0;
-      }
 
-      .style-button-auth:before {
-        content: " ";
-        display: block;
-        width: 200px;
-        height: 40px;
-        background: $color-6;
-        position: absolute;
-        top: -10px;
-        left: -200px;
-        transform: rotate(-45deg);
-        transition: all 0.85s ease-in-out;
-        animation: shine-1 3s infinite ease;
-      }
+        &:before {
+          content: " ";
+          display: block;
+          width: 200px;
+          height: 40px;
+          background: $color-6;
+          position: absolute;
+          top: 0;
+          left: -200px;
+          transform: rotate(-45deg);
+          transition: all 0.85s ease-in-out;
+          animation: shine-2 3s infinite ease;
+        }
 
-      .style-button-auth:after {
-        content: " ";
-        display: block;
-        width: 200px;
-        height: 30px;
-        background: $color-6;
-        position: absolute;
-        top: -10px;
-        left: -120px;
-        transform: rotate(-45deg);
-        transition: all 0.85s ease-in-out;
-        animation: shine-1 3s infinite ease;
+        &:after {
+          content: " ";
+          display: block;
+          width: 200px;
+          height: 30px;
+          background: $color-6;
+          position: absolute;
+          top: 0;
+          left: -120px;
+          transform: rotate(-45deg);
+          transition: all 0.85s ease-in-out;
+          animation: shine-2 3s infinite ease;
+        }
       }
     }
   }
@@ -333,6 +335,344 @@
 
   .card-button-show {
     animation: opacityButton 0.85s both ease;
+    display: flex !important;
   }
 }
 
+@media screen and (max-width: 1600px) {
+}
+
+@media screen and (max-width: 1400px) {
+}
+
+@media screen and (max-width: 1280px) {
+  @keyframes opacityBlock {
+    0% {
+      width: 0;
+      margin: 0;
+    }
+    50% {
+      opacity: 0;
+      margin: 25px;
+    }
+    75% {
+      opacity: 0.5;
+    }
+    100% {
+      opacity: 1;
+      width: 475px;
+      margin-left: 10px;
+      margin-top: 3.5%;
+    }
+  }
+
+  .auth-block {
+    max-width: none;
+
+    .container {
+      margin-left: 5px;
+      margin-right: 5px;
+
+      .reg-1 {
+        padding: 45px 10px 0 10px;
+
+        .title-reg-1 {
+          font-size: 22px;
+        }
+
+        form {
+          .line {
+            .input-custom {
+              min-width: 400px;
+              max-width: 400px;
+            }
+          }
+        }
+      }
+
+      .reg-2 {
+        padding-left: 5px;
+        padding-right: 5px;
+
+        .check-block {
+          margin-left: 3px;
+          margin-right: 3px;
+        }
+      }
+    }
+
+    .card-visual {
+      .card-vis-block {
+        min-width: auto;
+        max-width: none;
+        width: 100%;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  @keyframes opacityBlock {
+    0% {
+      width: 0;
+      margin: 0;
+    }
+    50% {
+      opacity: 0;
+      margin: 25px;
+    }
+    75% {
+      opacity: 0.5;
+    }
+    100% {
+      opacity: 1;
+      width: 575px;
+      margin-left: auto;
+      margin-right: auto;
+      margin-top: 3.5%;
+    }
+  }
+
+  .auth-block {
+    flex-direction: column;
+
+    .container {
+
+      .reg-1 {
+        padding: 45px 10px 0 10px;
+
+        .title-reg-1 {
+          font-size: 26px;
+        }
+
+        form {
+          .line {
+            .input-custom {
+              min-width: 600px;
+              max-width: 600px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 960px) {
+}
+
+@media screen and (max-width: 768px) {
+  .auth-block {
+    .container {
+      .reg-1 {
+        .title-reg-1 {
+          font-size: 24px;
+        }
+
+        form {
+          .line {
+            .input-custom {
+              min-width: 550px;
+              max-width: 550px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 640px) {
+  @keyframes opacityBlock {
+    0% {
+      width: 0;
+      margin: 0;
+    }
+    50% {
+      opacity: 0;
+      margin: 25px;
+    }
+    75% {
+      opacity: 0.5;
+    }
+    100% {
+      opacity: 1;
+      width: 100%;
+      margin-left: auto;
+      margin-right: auto;
+      margin-top: 3.5%;
+    }
+  }
+
+  .auth-block {
+    .container {
+      margin-right: 0;
+      margin-left: 0;
+
+      .reg-1 {
+        .title-reg-1 {
+          font-size: 24px;
+        }
+
+        form {
+          .line {
+            .input-custom {
+              min-width: 390px;
+              max-width: 390px;
+            }
+          }
+        }
+      }
+    }
+
+    .card-visual {
+      .margin-block {
+        .style-button-auth {
+          width: 250px !important;
+          height: 55px !important;
+          line-height: 55px !important;
+          font-size: 24px !important;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .auth-block {
+    margin-left: 4.5px;
+    margin-right: 4.5px;
+
+    .container {
+      margin-right: 0;
+      margin-left: 0;
+
+      .error {
+        font-size: 14px;
+        height: 18px;
+        line-height: 18px;
+      }
+
+      .reg-1 {
+        padding: 10px 10px 0 10px;
+
+        .title-reg-1 {
+          font-size: 18px;
+        }
+
+        form {
+          .line {
+            .icon-span {
+              margin: auto 0;
+              height: 40px;
+              width: 30px;
+              padding: 3px;
+            }
+
+            .input-custom {
+              min-width: 280px;
+              max-width: 280px;
+              min-height: 40px;
+              max-height: 40px;
+              padding: 5px;
+              font-size: 12px;
+            }
+          }
+        }
+      }
+
+      .reg-2 {
+        padding: 10px;
+
+        .check-block {
+          padding-top: 8px;
+          margin: 0;
+
+          label {
+            font-size: 13px;
+            height: 40px;
+            line-height: 20px;
+            text-align: center;
+          }
+
+          input[type="checkbox"] + label:before {
+            width: 18px;
+            height: 18px;
+            left: 0;
+            top: 0;
+          }
+        }
+      }
+    }
+
+    .card-visual {
+      .card-vis-block {
+        padding: 5px;
+        min-height: 250px;
+
+        .block-l-1 {
+          .player-img {
+            width: 100px;
+            height: 100px;
+          }
+
+          .player-info-card-block {
+            min-height: 100px;
+          }
+        }
+
+        .player-inf {
+          font-size: 13px;
+          padding: 2.5px;
+        }
+      }
+
+      .margin-block {
+        .style-button-auth {
+          width: 215px !important;
+          height: 50px !important;
+          line-height: 50px !important;
+          font-size: 20px !important;
+          margin-top: 40px !important;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .auth-block {
+    margin-left: 3px;
+    margin-right: 3px;
+
+    .container {
+      .reg-1 {
+        padding: 7px 7px 0 7px;
+
+        form {
+          .line {
+            .icon-span {
+
+              .input-custom {
+                min-width: 270px;
+                max-width: 270px;
+              }
+            }
+          }
+        }
+      }
+    }
+
+    .card-visual {
+      .margin-block {
+        .style-button-auth {
+          width: 180px !important;
+          height: 35px !important;
+          line-height: 35px !important;
+          font-size: 16px !important;
+          margin-top: 35px !important;
+        }
+      }
+    }
+  }
+}
