--- a/src/modules/components/[0_grouped_0]-Prizes/money/Money.scss
+++ b/src/modules/components/[0_grouped_0]-Prizes/money/Money.scss
@@ -2,45 +2,27 @@
 
 @keyframes animation-money {
   0% {
-    background: url("../../../../bases/minecraft-item/itemsPNG/58.png");
-    background-position-x: center;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
+    background: url("../../../../bases/minecraft-item/itemWEBP/Deepslate_Diamond_Ore.webp");
     background-size: cover;
   }
   25% {
-    background: url("../../../../bases/minecraft-item/itemsPNG/50.png");
-    background-position-x: center;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
+    background: url("../../../../bases/minecraft-item/itemWEBP/Deepslate_Emerald_Ore.webp");
     background-size: cover;
   }
   50% {
-    background: url("../../../../bases/minecraft-item/itemsPNG/52.png");
-    background-position-x: center;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
+    background: url("../../../../bases/minecraft-item/itemWEBP/Deepslate_Gold_Ore.webp");
     background-size: cover;
   }
   75% {
-    background: url("../../../../bases/minecraft-item/itemsPNG/54.png");
-    background-position-x: center;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
+    background: url("../../../../bases/minecraft-item/itemWEBP/Deepslate_Redstone_Ore.webp");
     background-size: cover;
   }
   100% {
-    background: url("../../../../bases/minecraft-item/itemsPNG/58.png");
-    background-position-x: center;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
+    background: url("../../../../bases/minecraft-item/itemWEBP/Deepslate_Diamond_Ore.webp");
     background-size: cover;
   }
 }
 
 .animation-bg-money {
-  display: flex;
-  width: 100%;
-  height: 100%;
   animation: 10s infinite animation-money;
 }
