--- a/src/modules/components/[0_grouped_0]-Profile/change-password/Change-password.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/change-password/Change-password.scss
@@ -59,3 +59,50 @@
     }
   }
 }
+
+@media screen and (max-width: 1600px) {
+}
+
+@media screen and (max-width: 1400px) {
+}
+
+@media screen and (max-width: 1280px) {
+}
+
+@media screen and (max-width: 1024px) {
+}
+
+@media screen and (max-width: 960px) {
+}
+
+@media screen and (max-width: 768px) {
+}
+
+@media screen and (max-width: 640px) {
+  .block-pass {
+    .pass-h3 {
+      font-size: 18px;
+    }
+
+    .bt-pass {
+      width: 200px;
+      height: 35px;
+      line-height: 35px;
+      font-size: 16px;
+    }
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .block-pass {
+    .input-pass {
+      width: 100%;
+      height: 40px;
+      margin-top: 12px;
+      line-height: 40px;
+    }
+  }
+}
+
+@media screen and (max-width: 360px) {
+}
