--- a/src/modules/components/[0_grouped_0]-Profile/my-profile/My-profile.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/my-profile/My-profile.scss
@@ -44,10 +44,7 @@
       width: 480px;
       height: 225px;
       background: $color-14;
-      margin-top: 10px;
-      margin-bottom: 10px;
-      margin-left: auto;
-      margin-right: auto;
+      margin: 10px auto 10px auto;
 
       .h5-cont {
         width: 333px;
@@ -74,37 +71,6 @@
         border-radius: 12px;
         border: none;
         margin: 0 auto;
-
-        .copy-button {
-          position: absolute;
-          left: 0;
-          top: 0;
-          width: 333px !important;
-          height: 64px;
-          text-align: center;
-          line-height: 26px;
-          cursor: pointer;
-          color: $color-3;
-          border: none;
-          border-radius: 12px;
-          background: transparent;
-
-          &:focus {
-            outline: none;
-          }
-
-          &:active {
-            outline: none;
-          }
-        }
-
-        .scanner {
-          height: 30px;
-          width: 15px;
-          position: absolute;
-          top: 17px;
-
-        }
       }
     }
   }
@@ -155,12 +121,74 @@
 }
 
 @media screen and (max-width: 768px) {
+  .profile-block {
+    .prof-block {
+      padding: 10px;
+
+      .prof-cont {
+        height: auto;
+        max-height: 28%;
+        margin: 5px auto;
+        width: 48%;
+
+        .label-cout {
+          font-size: 18px;
+        }
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 640px) {
+  .profile-block {
+    .prof-block {
+      height: auto;
+      flex-direction: column;
+
+      .prof-cont {
+        width: 80%;
+        height: 150px;
+
+        .h5-cont {
+          height: 45px;
+          line-height: 45px;
+          margin-bottom: 10px;
+        }
+
+        .label-cout {
+          height: 45px;
+          line-height: 45px;
+        }
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 480px) {
+  .profile-block {
+    .ds-link {
+      padding-top: 25px;
+      height: 100px;
+    }
+
+    .prof-block {
+      .prof-cont {
+        width: 100%;
+        height: 135px;
+
+        .h5-cont {
+          height: 35px;
+          line-height: 35px;
+          margin-bottom: 7px;
+        }
+
+        .label-cout {
+          height: 35px;
+          line-height: 35px;
+        }
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 360px) {
