--- a/src/modules/pages/cab/Cab.scss
+++ b/src/modules/pages/cab/Cab.scss
@@ -37,13 +37,13 @@
 
     .bt-ph {
       display: none;
-      z-index: 15000;
+      z-index: 8500;
     }
   }
 }
 
 .col-1 {
-  z-index: 10000;
+  z-index: 8000;
   width: 275px;
   min-width: 275px;
   max-width: 275px;
@@ -102,7 +102,7 @@
 }
 
 .col-2 {
-  z-index: 10000;
+  z-index: 7000;
   width: 100%;
   height: 100%;
   padding: 15px;
@@ -175,7 +175,6 @@
 
 
 @media screen and (max-width: 960px) {
-
   .main-cab {
     .box {
       position: relative;
@@ -208,6 +207,9 @@
       }
 
       .col-1 {
+        width: 300px;
+        min-width: 300px;
+        max-width: 300px;
         display: none;
         opacity: 0;
         transition: all 0.25s ease;
@@ -240,6 +242,22 @@
 }
 
 @media screen and (max-width: 480px) {
+  .main-cab {
+    .box {
+      margin: 5px;
+      padding: 5px;
+
+      .col-1 {
+        width: 100%;
+        min-width: auto;
+        max-width: none;
+      }
+
+      .col-2 {
+        padding: 5px;
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 360px) {
