--- a/src/modules/pages/cab/Cab.scss
+++ b/src/modules/pages/cab/Cab.scss
@@ -81,6 +81,8 @@
         margin: 3px 0 3px 0;
         padding-left: 12px;
         color: $color-3;
+        border: none;
+        text-align: start;
         border-radius: 15px;
         outline: none;
 
