--- a/src/modules/components/[0_grouped_0]-Profile/my-profile/My-profile.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/my-profile/My-profile.scss
@@ -46,20 +46,7 @@
       background: $color-14;
       margin: 10px auto 10px auto;
 
-      .h5-cont {
-        width: 333px;
-        height: 64px;
-        font-weight: 400;
-        font-size: 20px;
-        text-align: center;
-        line-height: 64px;
-        color: $color-3;
-        margin: 0 auto;
-        margin-bottom: 25px;
-      }
-
       .label-cout {
-        position: relative;
         width: 333px;
         height: 64px;
         font-weight: 400;
@@ -73,6 +60,55 @@
         margin: 0 auto;
       }
     }
+
+    .prof-cont-custom {
+      display: flex;
+      flex-direction: column;
+      width: 650px;
+      height: auto;
+      max-height: 280px;
+      background: $color-14;
+      margin: 0 auto;
+      background: $color-14;
+      border-radius: 16px;
+
+      .ip-list {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+
+        .label-cout-custom {
+          width: 480px;
+          height: 48px;
+          font-weight: 400;
+          font-size: 22px;
+          text-align: center;
+          line-height: 48px;
+          color: $color-3;
+          background: $color-15;
+          border-radius: 12px;
+          border: none;
+          margin: 5px auto;
+
+          .span-ping {
+            margin-left: 7px;
+            color: $color-8;
+          }
+        }
+      }
+    }
+
+    .h5-cont {
+      width: 333px;
+      height: 64px;
+      font-weight: 400;
+      font-size: 20px;
+      text-align: center;
+      line-height: 64px;
+      color: $color-3;
+      margin: 0 auto;
+    }
+
   }
 }
 
@@ -96,18 +132,26 @@
 
       .prof-cont {
         width: 46%;
-        height: 180px;
+        height: 170px;
 
         .h5-cont {
           width: 100%;
-          height: 54px;
-          line-height: 54px;
-          margin-bottom: 18px;
+          height: 48px;
+          line-height: 48px;
         }
 
         .label-cout {
           width: 88%;
           font-size: 20px;
+        }
+      }
+
+      .prof-cont-custom {
+        .ip-list {
+          .label-cout-custom {
+            width: 88%;
+            font-size: 20px;
+          }
         }
       }
     }
@@ -124,15 +168,30 @@
   .profile-block {
     .prof-block {
       padding: 10px;
+      height: auto;
+      flex-direction: column;
 
       .prof-cont {
-        height: auto;
+        width: 96%;
+        height: 140px;
         max-height: 28%;
         margin: 5px auto;
-        width: 48%;
 
         .label-cout {
           font-size: 18px;
+        }
+      }
+
+      .prof-cont-custom {
+        width: 96%;
+        margin: 5px auto;
+
+        .ip-list {
+          padding-bottom: 8px;
+
+          .label-cout-custom {
+            font-size: 18px;
+          }
         }
       }
     }
@@ -142,13 +201,7 @@
 @media screen and (max-width: 640px) {
   .profile-block {
     .prof-block {
-      height: auto;
-      flex-direction: column;
-
       .prof-cont {
-        width: 80%;
-        height: 150px;
-
         .h5-cont {
           height: 45px;
           line-height: 45px;
@@ -158,6 +211,15 @@
         .label-cout {
           height: 45px;
           line-height: 45px;
+        }
+      }
+
+      .prof-cont-custom {
+        .ip-list {
+          .label-cout-custom {
+            height: 45px;
+            line-height: 45px;
+          }
         }
       }
     }
@@ -185,6 +247,18 @@
         .label-cout {
           height: 35px;
           line-height: 35px;
+        }
+      }
+
+      .prof-cont-custom {
+        width: 100%;
+        margin: 5px 0;
+
+        .ip-list {
+          .label-cout-custom {
+            height: 35px;
+            line-height: 35px;
+          }
         }
       }
     }
