--- a/src/modules/components/[0_grouped_0]-Prizes/my-prizes/My-prizes.scss
+++ b/src/modules/components/[0_grouped_0]-Prizes/my-prizes/My-prizes.scss
@@ -65,12 +65,14 @@
 
         .text-h5 {
           font-weight: 400;
-          font-size: 16px;
+          font-size: 19px;
           color: $color-3;
           text-align: center;
           height: auto;
           line-height: 25px;
-          width: auto;
+          width: 100%;
+          margin-top: auto;
+          margin-bottom: auto;
           margin-right: 15px;
         }
 
